aicode/mslang/tests/errors/undefined_var.ms
// Test: undefined variable runtime error
print x // expect runtime error: Undefined variable 'x'.
